--- a/app/src/main/res/layout/activity_test_menu.xml
+++ b/app/src/main/res/layout/activity_test_menu.xml
@@ -98,4 +98,16 @@
         android:textSize="14sp"
         />
 
+    <Button
+        android:id="@+id/test_menu_back_to_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@android:style/Widget.Holo.Button.Toggle"
+        android:layout_centerHorizontal="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:textColor="#fefefe"
+        android:textSize="14sp"
+        android:layout_below="@id/test_menu_btn2"
+        android:text="@string/button_menu"/>
+
 </RelativeLayout>
