--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".QuizActivity"
-    android:background="@drawable/quizpagebg"
+    android:background="@drawable/newquizpage"
     >
 
     <TextView
