--- a/app/src/main/res/layout/activity_learn_menu.xml
+++ b/app/src/main/res/layout/activity_learn_menu.xml
@@ -41,6 +41,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/learn_menu_if_title"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="18dp"
         android:fontFamily="sans-serif"
         android:text="@string/java_if_else2"
         android:textColor="#fefefe"
@@ -80,6 +81,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/learn_menu_loops"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="18dp"
         android:fontFamily="sans-serif"
         android:text="@string/java_loops2"
         android:textColor="#fefefe"
